update to 2.4.1